--- a/COMP3095_CRAP/.classpath
+++ b/COMP3095_CRAP/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="functions"/>
 	<classpathentry kind="src" path="servlets"/>
+	<classpathentry kind="src" path="filters"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-10.0.2">
 		<attributes>
 			<attribute name="module" value="true"/>
